wwr/styles/rafting.css
:root {
    --primary-color: rgb(245, 245, 245);
    --secondary-color: darkblue;
    --accent1-color: rgb(1, 1, 8);
    --accent2-color: #F97316;
    --heading-font: "Montserrat", "Lato", extrabold;
    --body-font: Opens Sans, Roboto;
}

header {
    background-color: var(--primary-color);
    color: var(--accent1-color);
    text-decoration: none;
}

a {
    text-decoration: none;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: var(--body-font);
    color: var(--accent1-color);
}

header,
main,
footer {
    width: 1200px;
    margin: 0 auto;
    background-color: #FFFF;
    padding: 1rem;
    border: 1px solid rgb(0 0 0 / .1);

}

header img {
    position: relative;
}

h2,
h3 {
    font-family: var(--heading-font);
    color: var(--primary-color);
    font-size: 2em;

    top: 20px;
    width: auto;
    padding: 16px;
    text-align: center;
    opacity: 0.9;
    background-color: var(--accent2-color);
    color: var(--primary-color);
}

nav,
p,
section,
article {
    margin: 16px;
    padding: 8px;
    font-size: 18px;
}

.socialmedia a {
    text-decoration: none;
}

.hero {
    position: relative;
}

.hero img {
    display: block;
    width: 100%;
    height: auto;
}

h1 {
    position: absolute;
    top: 20px;
    width: 100%;
    padding: 16px;
    text-align: center;
    opacity: 0.9;
    background-color: var(--accent2-color);
    color: var(--primary-color);

}

.hero article {
    position: absolute;
    top: 460px;
    width: auto;
    padding: 5px;
    text-align: left;
    opacity: 0.8;
    background-color: var(--accent2-color);
    color: var(--primary-color)
}

.hero article img {
    /* position: absolute; */
    float: right;
    margin: 15px 20px 15px 30px;
    /* top: 700px; */
    width: 120px;
    border: 1px solid #000;
    /* padding: 0.65rem; */
    box-shadow: 0 0 30px #111;
}

.hero article p {
    text-align: justify;
}

section p {
    text-align: justify;
}

